# fastapi_record_app

./: README.md  app.py  file.csv  load_test.py  main.py  models.py  pyproject.toml  utils.py
routes/: records.py
